--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">The universe around us</string>
+    <string name="search_wiki">Search in Wikipedia</string>
+    <string name="wiki_helper_text">"Search for a term on Wikipedia "</string>
+    <string name="error_loading_data">Error loading data</string>
+    <string name="empty_image_url">\"Empty image URL received \"</string>
+    <string name="settings">Settings</string>
+    <string name="to_screen_1">To screen 1</string>
+    <string name="to_screen_2">To screen 2</string>
 </resources>
