--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="blue_theme">Blue theme</string>
     <string name="orange_theme">Orange theme</string>
     <string name="green_theme">Green theme</string>
+    <string name="photo_of_the_day">Photo of the day</string>
+    <string name="photos_of_the_universe">Photos of the Universe</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="earth_tab_title">Earth</string>
+    <string name="mars_tab_title">Mars</string>
+    <string name="moon_tab_title">Moon</string>
 </resources>
